--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  flutter_slidable: ^3.0.1
+  hive_flutter: ^1.1.0
   google_fonts: ^6.1.0
   staggered_grid_view_flutter: ^0.0.4
   flutter_staggered_grid_view: ^0.7.0
@@ -21,6 +23,7 @@ dependencies:
   community_material_icon: ^5.9.55
   page_transition: ^2.0.5
   imageview360: ^1.3.0
+  flutter_rating_bar:
   collection:
 
 dev_dependencies:
