--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   page_transition: ^2.0.5
   imageview360: ^1.3.0
   flutter_rating_bar:
+  image_picker:
   collection:
 
 dev_dependencies:
